--- a/SuperLinkClassroom/SuperLinkClassroom.csproj
+++ b/SuperLinkClassroom/SuperLinkClassroom.csproj
@@ -72,6 +72,7 @@
     <Compile Include="LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\ChatMessage.cs" />
     <Compile Include="Model\Role.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="UserControl\LoadingPage.xaml.cs">
